fix some spacing issues on uploads

--- a/CLIENT/CLIENT.FileSharing/src/app/pages/uploads/uploads.component.scss
+++ b/CLIENT/CLIENT.FileSharing/src/app/pages/uploads/uploads.component.scss
@@ -1,3 +1,14 @@
+@use "@angular/material" as mat;
+
 .heading {
   font-size: 1.75em;
+  margin-bottom: 0;
+}
+
+.filter-container {
+  // @include mat.form-field-density(minimum); // TODO: handle with theming
+  .filter-form {
+    display: flex;
+    align-items: center;
+  }
 }
